// dispatcher.proto
syntax = "proto3";

package collector;
option go_package = "github.com/accretional/collector/gen/collector";

import "common.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto"; // <--- ADDED THIS IMPORT

// ============================================================================
// CollectiveDispatcher Service (aka DynamicDispatcher in design)
// Maintains Collections: DispatchServers, Connections, Dispatches, Collectors
// ============================================================================

// Stored in DispatchServers Collection
message DispatchServer {
  string id = 1;
  string address = 2;
  repeated string namespaces = 3;
  repeated string capabilities = 4;
  Metadata metadata = 5;
  google.protobuf.Timestamp last_heartbeat = 6;
}

// Stored in Connections Collection
message Connection {
  string id = 1;
  string source_collector_id = 2;
  string target_collector_id = 3;
  string address = 4;
  repeated string shared_namespaces = 5;
  Metadata metadata = 6;
  google.protobuf.Timestamp last_activity = 7;
}

// Stored in Dispatches Collection (tracks dispatch history)
message Dispatch {
  string id = 1;
  string namespace = 2;
  ServiceTypeRef service = 3;
  string method_name = 4;
  string source_collector_id = 5;
  string target_collector_id = 6;
  Status result_status = 7;
  Metadata metadata = 8;
  google.protobuf.Timestamp completed_at = 9;
}

// Stored in Collectors Collection (cluster peer info)
message Collector {
  string id = 1;
  string address = 2;
  repeated string namespaces = 3;
  repeated string capabilities = 4;
  bool is_direct_peer = 5;
  // vs indirect/discovered
  Metadata metadata = 6;
  google.protobuf.Timestamp last_seen = 7;
}

// API Messages
message ServeRequest {
  string namespace = 1;
  ServiceTypeRef service = 2;
  string method_name = 3;
  google.protobuf.Any input = 4;
  map<string, string> execution_context = 5;
  
  // Service definition - can be binary data or URI
  oneof service_def {
    bytes service_binary = 6;  // Binary service implementation
    string service_uri = 7;    // URI to service implementation
  }
}

message ServeResponse {
  Status status = 1;
  google.protobuf.Any output = 2;
  string executor_id = 3;
}

message ConnectRequest {
  string address = 1;
  repeated string namespaces = 2;
  map<string, string> metadata = 3;
}

message ConnectResponse {
  Status status = 1;
  string connection_id = 2;
}

message DispatchRequest {
  string namespace = 1;
  ServiceTypeRef service = 2;
  string method_name = 3;
  google.protobuf.Any input = 4;
  string target_collector_id = 5;  // Optional, auto-route if empty
  map<string, string> routing_hints = 6;
}

message DispatchResponse {
  Status status = 1;
  google.protobuf.Any output = 2;
  string handled_by_collector_id = 3;
}

service CollectiveDispatcher {
  rpc Serve(ServeRequest) returns (ServeResponse);
  rpc Connect(ConnectRequest) returns (ConnectResponse);
  rpc Dispatch(DispatchRequest) returns (DispatchResponse);
}
